# Dummy

./: .gitignore  404.html  __init__.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  search.html  sitemap.xml  tox.ini
.github/workflows/: pages.yml  release.yml  run_test.yml  test.yml
.github/workflows/db/: mysql.yml  postgres.yml
docs/: README.md  _config.yml  index.md  readme.md
dummy/: __init__.py  main.py
indi_dummy/: __init__.py  main.py  math_code.py
requirements/: docs.txt
search/: search_index.json
tests/: __init__.py  test_main.py  test_math_code.py
