[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "indi_dummy"
description = "This is a Dummy Project"
authors = ["Indivar Mishra <abc@example.com>"]
classifiers=[
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"
]
version = "0.0.1"

[project.optional-dependencies]
docs = ["mkdocs==1.4.2", "mkdocs-awesome-pages-plugin==2.8.0", "mkdocs-material==8.5.9", "mkdocstrings-python==0.7.1"]
test = ["pylint", "pytest", "tox"]
release = ["twine", "wheel"]